2007-10-17  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kleopatra.nsi: Add DESC_Menu_kleopatra language string.
	* src/inst-sections.nsi: Install kleopatra links.
	* src/installer-finish.nsi: Uninstall kleopatra.
	* configure.ac: Make pinentry dependent on gtk+ instead of glib.
	* src/Makefile.am (gpg4win_pkg_pinentry_configure): Revert last
	change.
	* src/inst-pinentry.nsi: Revert last change.

2007-10-17  Werner Koch  <wk@g10code.com>

	* src/inst-kdesupport.nsi: Remove libeay32.dll and ssleay32/dll;
	they seems not to be necessary and conflict with the GPL anyway.

	* src/inst-gpgol.nsi: s/GPGol/GpgOL/.

	* src/inst-pinentry.nsi: Install native pinentry.
	* src/Makefile.am: Disable pinnetry-gtk-2 for now.
	* configure.ac: Make pinentry depend on glib.

2007-10-17  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Reenable oxygen-icons dependency.
	* src/inst-oxygen-icons.nsi: Only install action icons for now.
	* packages/packages.current: Reenable oxygen-icons.
	Update kleopatra and gpgex packages.

2007-10-16  Marcus Brinkmann  <marcus@g10code.de>

	* src/uninst-dirmngr.nsi: Remove etc files.
	* src/inst-dirmngr.nsi: Do not use wildcard.

	* src/uninst-qt.nsi: Uninstall qt.conf.

	* src/uninst-qt.nsi: Uninstall mingwm10.dll.
	* src/inst-kleopatra.nsi: Fix slash instead backslash error.
	* src/uninst-kdelibs.nsi: Remove directories share\config\ui and
	share\config instead share\ui.  Remove directories
	share\kde4\services and share\kde4.
	* src/uninst-pinentry.nsi: Uninstall pinentry-w32.exe and
	pinentry-gtk-2.exe.
	* src/uninst-kleopatra.nsi: Uninstall kleopatra.bat.
	Remove directory share\apps\kleopatra.

	* packages/packages.current: Enable gpgex.

2007-10-15  Marcus Brinkmann  <marcus@g10code.de>

	* src/kleopatra.bat: New file.
	* src/inst-kleopatra.nsi: Install kleopatra.bat.
	* src/Makefile.am (EXTRA_DIST): Add qt.conf and kleopatra.bat.

2007-10-14  Marcus Brinkmann  <marcus@g10code.de>
